--- a/countries.html
+++ b/countries.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest Countries</title>
+    <link rel="stylesheet" href="countries.css">
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
     </section>
 </main>
 
-<button onclick="loadCountries()">Show countries</button>
+
 
 
 
