--- a/countries.html
+++ b/countries.html
@@ -12,6 +12,12 @@
     </header>
 <main>
     <section>
+        <h3>Country details</h3>
+        <div id="country-detail">
+            
+        </div>
+    </section>
+    <section>
         <div id="countries-container">
 
         </div>
